[IV] QPT-176 added endpoint to get aggregated rooms | reservations
